exercise7-phonebook-application/c5-ec2instance.tf
# EC2 Instance
resource "aws_instance" "myec2vm" {
  ami                    = data.aws_ami.amzlinux2.id
  instance_type          = var.instance_type
  user_data              = file("${path.module}/app1-install.sh")
  key_name               = var.instance_keypair
  vpc_security_group_ids = [aws_security_group.webserver1.id]
  tags = {
    "Name" = "Roman Numerals Converter"
  }
}
